@@ -1,5 +1,11 @@
 $Id$
 
+2014-07-22  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- Apple SD/SM...E/F SSDs (ticket #342)
+	- Apple SSD SM128, Asus-Phison SSD: Remove (missing attribute info)
+
 2014-07-20  Christian Franke  <franke@computer.org>
 
 	atacmds.cpp: Rework heuristics for 'tempminmax' format.
